# SlotPokerMachine_2

./: .clang-format  .cmake-format.json  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  compile_commands.json  conanfile.txt  main.cpp  run_me.py  run_me.sh
backend/: CMakeLists.txt  api.cpp  api.hpp  game.cpp  game.hpp
backend/accounting/: accounting.cpp  accounting.hpp
backend/fsm/: finitestatemachine.cpp  finitestatemachine.hpp
backend/src/: accounting.cpp  accounting.hpp  aliases.hpp  game.cpp  game.hpp
cmake/: ConfigureFiles.cmake
cmake/config_files/: variables.in.json
frontend/: CMakeLists.txt  CMakeUserPresets.json  main.cpp  view.cpp  view.hpp
frontend/assets/: assets.json  scene.json
frontend/src/: aliases.hpp  assetsmanager.cpp  assetsmanager.hpp  defines.hpp  scene.cpp  scene.hpp  view.cpp  view.hpp
frontend/src/data_structures/: sfml.hpp
frontend/src/scene/: objects.cpp  objects.hpp  scene.cpp  scene.hpp  scene.json
scripts/: _utils.py  _wrappers.py  build.py  format.py  run.py  setup.py
scripts/bootstrap/: __init__.py
scripts/formatter/: __init__.py
scripts/utils/: __init__.py
sdk/: CMakeLists.txt  enums.hpp  filesystem.hpp  json.cpp  json.hpp  logger.cpp  logger.hpp  sleep.hpp
src/: finitestatemachine.cpp  finitestatemachine.h  game.cpp  game.h
src/accounting/: accounting.cpp  accounting.h
src/fsm/: finitestatemachine.cpp  finitestatemachine.h
src/view/: assets_manager.cpp  assets_manager.h  view.cpp  view.h
test/: CMakeLists.txt  example.cpp  main.cpp
test/accounting/: accounting_test.cpp
test/finitestatemachine/: finitestatemachine_test.cpp
test/game/: game_test.cpp
test/game/accounting/: accounting_test.cpp
test/game/finitestatemachine/: finitestatemachine_test.cpp
utils/cmake/: utils.cmake
